feat: inicio da implementacao do evento de dominio

--- a/src/NerdStore.Catalogo.Domain/NerdStore.Catalogo.Domain.csproj
+++ b/src/NerdStore.Catalogo.Domain/NerdStore.Catalogo.Domain.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\NerdStore.Core\NerdStore.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="mediatr" Version="9.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
